--- a/src/integration-test/resources/application-test.yml
+++ b/src/integration-test/resources/application-test.yml
@@ -4,8 +4,8 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     #We would NEVER use a root account, except on localhost for local testing
     url: jdbc:mysql://localhost/ogbrown_courses_demo2?autoReconnect=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&createDatabaseIfNotExist=true
-    username: root
-    password: example
+    username: user
+    password: user123
   jpa:
     database-platform: org.hibernate.dialect.MySQL8Dialect
     show-sql: false
