--- a/src/integration-test/resources/application-test.yml
+++ b/src/integration-test/resources/application-test.yml
@@ -3,7 +3,7 @@ spring:
     initialization-mode: never
     driver-class-name: com.mysql.cj.jdbc.Driver
     #We would NEVER use a root account, except on localhost for local testing
-    url: jdbc:mysql://localhost/ogbrown_courses_demo2?autoReconnect=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&createDatabaseIfNotExist=true
+    url: jdbc:mysql://localhost:3306/ogbrown_courses_demo2?autoReconnect=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&createDatabaseIfNotExist=true
     username: user
     password: user123
   jpa:
