--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
     <groupId>com.ogbrown</groupId>
     <artifactId>ogbrown-courses-rest</artifactId>
     <version>0.1.0</version>
+    <packaging>war</packaging>
 
     <properties>
         <java.version>1.8</java.version>
@@ -15,6 +16,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <junit.platform.version>1.2.0</junit.platform.version>
         <junit.jupiter.version>5.2.0</junit.jupiter.version>
+        <start-class>com.ogbrown.courses.Application</start-class>
     </properties>
 
     <parent>
@@ -36,7 +38,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
@@ -104,6 +110,7 @@
     </profiles>
 
     <build>
+        <finalName>ogbrown-courses-rest</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
