--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,50 @@
 spring:
   profiles:
     active: ${SPRING_PROFILE:"dev"}
+---
+spring.profiles: prod
+spring:
+  datasource:
+    platform: mysql
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    initialization-mode: never
+    jndi-name: java:comp/env/jdbc/CoursesRestMonoDemoDb
+  jpa:
+    database-platform: org.hibernate.dialect.MySQL8Dialect
+    show-sql: false
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        jdbc.time_zone: UTC
+        hbm2ddl:
+          import_files: import.sql
+        show_sql: false
+        format_sql: false
+  http:
+    log-request-details: true
+  jmx:
+    enabled: true
+server:
+  servlet:
+    context-path: /
+  error:
+    whitelabel.enabled: false
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+logging:
+  level:
+    root: debug
+    com.ogbrown: trace
+    org.apache: warn
+    org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandlerMapping: info
+    org.springframework.web: info
+    org.hibernate: info
+    org.hibernate.SQL: warn
+debug: true
 
 ---
 spring.profiles: jenkins
